# SharpWine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  components.lock.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  diagnose-wineboot.yml  release-verify.yml  release.yml
LICENSES/: Wine-LGPL-2.1-or-later.txt
assets/macos/: MetalSharpRuntime.icns
cmake/: blink-gem-config.h.in  blink-gem-native.cmake  blink-gem-sources.txt  metalsharp-gem-wine.exports  patch-blink-gem.cmake  patch-dynarmic-windows-arm64.cmake
docs/: fixtures.md  i386-phase6-performance-report.md  issue-45-x86_64-support-plan.md  issue-46-i386-wow64-support-plan.md
docs/architecture/: deterministic-vcpu-plan.md  gem-abi.md  guest-memory.md  issue-45-x86_64-guest-support-roadmap.md  pe-arm64x-materializer.md  wine-gem-bridge.md
docs/architecture/adr/: 0004-aarch64-correctness-engine.md  0004-aarch64-correctness-engine.provenance.json  0005-arm64ec-thunk-fixtures.md  0006-x86-tso-correctness-contract.md  0007-4k-page-isolation.md  0008-blink-embedding.provenance.json  0008-blink-roundtrip.md  0009-integrated-wine-v0.1-release.md  0010-i386-wow64-architecture.md  0011-rosetta-differential-oracle.md  0011-rosetta-differential-oracle.provenance.json  0012-fex-coverage-inventory.md  0012-fex-coverage-inventory.provenance.json  0013-i386-context-abi-v3.md  i386-phase3-capabilities.json  i386-phase4-evidence.json  i386-phase6-capabilities.json  i386-phase6-evidence.json  i386-phase6-performance-evidence.json  i386-phase6-trace-coverage.json  (+1 more)
docs/release/: integrated-wine-package.md
release/: current.json  v0.1.0-ready.json  v0.1.1-overlay-policy.json  v0.1.2-overlay-policy.json
src/gem/: arm64ec_dynarmic.cpp  arm64ec_engine.c  arm64ec_engine_internal.h  arm64ec_target.c  context.c  context_conversion.c  context_serialization.c  hybrid_runtime.c  hybrid_runtime_internal.h  i386_blink.c  i386_context.c  i386_context_serialization.c  i386_engine.c  i386_engine_internal.h  i386_engine_ops.h  i386_engine_trace.h  i386_memory.c  memory.c  memory_internal.h  pe_arm64x.c  pe_arm64x_loader.c  wine_bridge.c  x64_blink.c  x64_engine.c  x64_engine_internal.h  x64_engine_trace.h
tests/: arm64ec_engine_conformance.cpp  arm64ec_engine_zero_rosetta.cpp  arm64ec_target_test.c  arm64x_roundtrip_conformance.cpp  context_conversion_test.c  context_layout_test.c  context_serialization_test.c  context_test.c  gem_headers_cxx_test.cpp  i386_cmpxchg_flags_test.c  i386_context_serialization_test.c  i386_context_test.c  i386_engine_conformance.c  i386_engine_ops_conformance.c  i386_handler_trace_conformance.c  i386_memory_test.c  i386_phase2_conformance.c  i386_phase3_conformance.c  i386_phase4_conformance.c  i386_phase4_worker.c  i386_phase55_concurrency.c  i386_phase55_performance.c  i386_phase5_ci.c  i386_state_transfer_test.c  i386_virtual_tsc_test.c  i386_xsave_foundation_test.c  macos_tso_api_probe.c  memory_page_isolation_test.cpp  memory_test.c  memory_transaction_concurrency_test.cpp  pe_arm64x_fixture_builder.c  pe_arm64x_loader_test.c  pe_arm64x_malformed_test.c  wine_bridge_conformance.c  wine_i386_bridge_conformance.c  wine_x86_64_bridge_conformance.c  x64_engine_conformance.cpp  x86_64_jit_conformance.cpp
tests/fixtures/: i386_phase2_faults.c  i386_phase3_records.h  i386_phase4_baseline.c  i386_phase4_baseline.s  i386_phase4_execute.c  i386_phase4_execute.h  i386_phase4_generator.c  i386_phase4_records.h  rosetta_i386_matrix.c  rosetta_i386_matrix.s  rosetta_i386_oracle.c  rosetta_i386_oracle.h  rosetta_i386_oracle.s  rosetta_x64_oracle.c  rosetta_x64_oracle.h  rosetta_x64_oracle.s  wine_arm64_gem_acceptance.c  wine_i386_gem_acceptance.c  wine_x86_64_acceptance.c  x86_64_exit.c  x86_tso_litmus.c
tests/fixtures/arm64x_linked/: CMakeLists.txt  fixture.c  fixture.def  fixture_api.h  fixture_x64.c  fixture_x64_roundtrip.asm  host.c
tools/: audit_blink_embedding.py  audit_blink_memory_order.py  generate_arm64ec_forbidden_decoder.py
tools/ci/: arm64x-issue11-probe.cpp  audit-zero-rosetta.sh  build-x86-64-exit-fixture.py  build-x86_64-windows-fixture.py  check-format.sh  check-repository.py  compare-x86_64-wine-evidence.py  create-arm64x-issue14-bundle.py  pe-arm64x-inspector.c  run-all.sh  run-blink-tso-conformance.py  run-x86_64-wine-fixture.py  test-phase4-tools.py  test-trace-coverage-tools.py  validate-arm64x-issue14-artifact.py  validate-blink-tso-evidence.py
tools/i386/: build-phase4-baseline.sh  cleanup-phase4-baseline.sh  create_phase5_golden.py  i386_handler_map_probe.c  map_handler_coverage.py  minimize_phase4_case.py  phase4_differential.py  run-phase4-baseline-windows.sh  run-phase4-baseline.sh
tools/performance/: notepad-window-probe.swift
tools/release/: apply-dxmt-patches.sh  apply-focused-overlay.py  apply-runtime-patches.py  apply-wine-patches.sh  audit-runtime.py  build-dxmt-pair.sh  build-integrated-wine.sh  build-release-candidate.sh  create-focused-overlay.py  create-release-assets.py  create-runtime-patch-provenance.py  finalize-i386-evidence.py  finalize-x86-64-evidence.py  prepare-published-foundation.py  reconstruct-x86-64-fixture.py  repackage-published-runtime.py  stage-runtime.py  test-dxmt-patches.py  test-focused-overlay.py  test-packaged-runtime.py  test-release-tools.py  test-wine-patches.py  validate-dxmt-pair.py  validate-dxmt-patches.py  validate-readiness.py  validate-release-assets.py  validate-wine-patches.py  verify-published-release.py
tools/rosetta/: prepare-metalsharp-runtime.sh  replay-i386-matrix.py  replay-i386-phase2-faults.py  run-i386-matrix.py  run-i386-oracle.py  run-i386-phase2-faults.py  run-x64-oracle.py  wine-oracle-entitlements.plist
tools/windows/: Arm64xFixtureManifest.psm1  build-arm64x-fixture.ps1  compare-arm64x-fixture-builds.ps1  inspect-arm64x-fixture.ps1  probe-arm64x-toolchain.ps1  test-arm64x-fixture-manifests.ps1  validate-arm64x-issue11-evidence.ps1
(+44 files in other folders)
